# geru-marshmallow-jsonapi

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
geru/marshmallow_jsonapi/: __init__.py  apificator.py  exceptions.py  helpers.py  schemas.py
marshmallow_jsonapi/: __init__.py
tests/: __init__.py  schemas.py  test_apificator.py  test_exceptions.py
