[tool.poetry]
name = "geru.marshmallow-jsonapi"
version = "0.1.5"
description = "Marshmallow jsonapi is a ext of marshmallow to provide a default contract for GERU REST's API's"
authors = ["Marcelo Moraes <marcelo.moraes@geru.com.br>"]
readme = "README.md"
repository = "https://github.com/geru-br/marshmallow-jsonapi"
homepage = "https://github.com/geru-br/marshmallow-jsonapi"
packages = [
    { include = "geru"},
    ]

[tool.poetry.dependencies]
python = "^2.7 || ^3.6"
wheel = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-docstrings = "*"
pytest = "*"
pytest-cov = "*"
more-itertools = "*"
tox = "*"
twine = "*"
